Knowrob/indigo/indigo-knowrob-dev/catkin_ws/logs/knowrob_knowledge_base/build.make.084.log.stderr
/root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/src/listener.cpp: In function 'void perceptCallback(knowrob_semantic_map_msgs::SemMapObject)':
/root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/src/listener.cpp:12:33: error: no matching function for call to 'poseMsgToEigen(geometry_msgs::Pose&, Eigen::Affine3d*)'
   tf::poseMsgToEigen(pose,&eigen);
                                 ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/src/listener.cpp:12:33: note: candidates are:
In file included from /root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/include/knowrob_knowledge_base/listener.h:9:0,
                 from /root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/src/listener.cpp:1:
/opt/ros/indigo/include/eigen_conversions/eigen_msg.h:58:6: note: void tf::poseMsgToEigen(const Pose&, Eigen::Affine3d&)
 void poseMsgToEigen(const geometry_msgs::Pose &m, Eigen::Affine3d &e);
      ^
/opt/ros/indigo/include/eigen_conversions/eigen_msg.h:58:6: note:   no known conversion for argument 2 from 'Eigen::Affine3d* {aka Eigen::Transform<double, 3, 2>*}' to 'Eigen::Affine3d& {aka Eigen::Transform<double, 3, 2>&}'
/opt/ros/indigo/include/eigen_conversions/eigen_msg.h:61:6: note: void tf::poseMsgToEigen(const Pose&, Eigen::Isometry3d&)
 void poseMsgToEigen(const geometry_msgs::Pose &m, Eigen::Isometry3d &e);
      ^
/opt/ros/indigo/include/eigen_conversions/eigen_msg.h:61:6: note:   no known conversion for argument 2 from 'Eigen::Affine3d* {aka Eigen::Transform<double, 3, 2>*}' to 'Eigen::Isometry3d& {aka Eigen::Transform<double, 3, 1>&}'
/root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/src/listener.cpp:14:24: error: invalid operands of types 'const char [26]' and 'const char [36]' to binary 'operator+'
                        "'http://knowrob.org/kb/knowrob.owl#"+obj.getType()+"', ["
                        ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/src/listener.cpp:14:62: error: 'obj' was not declared in this scope
                        "'http://knowrob.org/kb/knowrob.owl#"+obj.getType()+"', ["
                                                              ^
/root/catkin_ws/src/Seerose/SourceCode/ROS/knowrob_knowledge_base/src/listener.cpp:15:26: error: 'p' was not declared in this scope
                        + p.m00 + ","+ p.m01 + ","+ p.m02 + ","+ p.m03 + ","
                          ^
make[2]: *** [CMakeFiles/knowrob_knowledge_base_listener.dir/src/listener.cpp.o] Error 1
make[1]: *** [CMakeFiles/knowrob_knowledge_base_listener.dir/all] Error 2
make: *** [all] Error 2
